--- a/desafios/desafio03/estilo/estilo.css
+++ b/desafios/desafio03/estilo/estilo.css
@@ -32,3 +32,20 @@ main {
     width: 269px;
     height: 471px;
 }
+/*formação dos botões*/
+#rede {
+    text-align: right;
+}
+a > img {
+    border-radius: 50%;
+    width: 50px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.404);
+    box-sizing: border-box;
+}
+#rede img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.603);
+    transition: transform 0.5s;
+}
