--- a/exercicios/media queries/ex02/estilo/style.css
+++ b/exercicios/media queries/ex02/estilo/style.css
@@ -1,3 +1,19 @@
 @charset "UTF-8";
 
 /* Config. Gerais*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html,body {
+    width: 100%;
+    height: 100%;
+    background-color: #233EFF;
+}
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px rgb(8, 33, 146);
+    padding: 10px;
+}
